[gd_scene load_steps=11 format=3 uid="uid://crst8lnhaxjoo"]

[ext_resource type="Script" path="res://scripts/screen_object_menu.gd" id="1_0piso"]
[ext_resource type="Texture2D" uid="uid://bum4c3am02n05" path="res://assets/up.png" id="2_alh0m"]
[ext_resource type="Script" path="res://scripts/name_edit.gd" id="2_wp1kw"]
[ext_resource type="Texture2D" uid="uid://ca2ptc02v2xhb" path="res://assets/down.png" id="3_atq7w"]
[ext_resource type="Theme" uid="uid://d18y4voshb0um" path="res://resources/Menu Theme.tres" id="5_osfap"]
[ext_resource type="Texture2D" uid="uid://c5fl4pf7cxwvc" path="res://assets/gizmo.png" id="6_fvmg6"]
[ext_resource type="Texture2D" uid="uid://bjtvmug1uu7ar" path="res://assets/Eyecon.png" id="7_vu764"]
[ext_resource type="Texture2D" uid="uid://kjsgcuplqh0x" path="res://assets/Eyecon2.png" id="8_4n01x"]
[ext_resource type="Texture2D" uid="uid://c0opx84ix6y28" path="res://assets/contract.png" id="9_be2g8"]
[ext_resource type="Texture2D" uid="uid://bam5fhr8naphp" path="res://assets/dupeicon.png" id="10_pe1i6"]

[node name="ScreenObjectMenu" type="PanelContainer" node_paths=PackedStringArray("talkbox", "bouncebox", "blinkbox", "filterbox", "visibilitytoggle", "name_field")]
offset_right = 159.0
offset_bottom = 69.0
size_flags_horizontal = 4
size_flags_vertical = 2
script = ExtResource("1_0piso")
talkbox = NodePath("VBoxContainer/Booleans/HBoxContainer/PanelContainer/VBoxContainer/CheckBox")
bouncebox = NodePath("VBoxContainer/Booleans/HBoxContainer/PanelContainer2/VBoxContainer/CheckBox")
blinkbox = NodePath("VBoxContainer/Booleans/HBoxContainer/PanelContainer3/VBoxContainer/CheckBox")
filterbox = NodePath("VBoxContainer/Booleans/HBoxContainer/PanelContainer4/VBoxContainer/CheckBox")
visibilitytoggle = NodePath("VBoxContainer/HBoxContainer/Visible")
name_field = NodePath("VBoxContainer/TopRow/Name")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TopRow"]
custom_minimum_size = Vector2(29.585, 0)
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/TopRow/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_alh0m")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/TopRow/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_atq7w")
ignore_texture_size = true
stretch_mode = 5

[node name="Name" type="LineEdit" parent="VBoxContainer/TopRow"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"
alignment = 1
script = ExtResource("2_wp1kw")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 27.345)
layout_mode = 2

[node name="Close" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(21.48, 0)
layout_mode = 2
theme = ExtResource("5_osfap")
text = "X"

[node name="Change Image" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_osfap")
text = "Change Image"

[node name="Gizmo" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
theme = ExtResource("5_osfap")
texture_normal = ExtResource("6_fvmg6")
ignore_texture_size = true
stretch_mode = 5

[node name="Visible" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
theme = ExtResource("5_osfap")
toggle_mode = true
texture_normal = ExtResource("7_vu764")
texture_pressed = ExtResource("8_4n01x")
ignore_texture_size = true
stretch_mode = 5

[node name="Recenter" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
theme = ExtResource("5_osfap")
texture_normal = ExtResource("9_be2g8")
ignore_texture_size = true
stretch_mode = 5

[node name="Duplicate" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
theme = ExtResource("5_osfap")
texture_normal = ExtResource("10_pe1i6")
ignore_texture_size = true
stretch_mode = 5

[node name="Booleans" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 29.025)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Booleans"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Booleans/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "HasMouth"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_osfap")
button_pressed = true

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/Booleans/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Bounce"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_osfap")
button_pressed = true

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/Booleans/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Blinks"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_osfap")
button_pressed = true

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer/Booleans/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer4/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Filter"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Booleans/HBoxContainer/PanelContainer4/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_osfap")

[connection signal="pressed" from="VBoxContainer/TopRow/VBoxContainer/TextureButton" to="." method="_shift_up"]
[connection signal="pressed" from="VBoxContainer/TopRow/VBoxContainer/TextureButton2" to="." method="_shift_down"]
[connection signal="text_changed" from="VBoxContainer/TopRow/Name" to="." method="_set_name"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Close" to="." method="_delete_object"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Change Image" to="." method="_request_file"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Gizmo" to="." method="_request_gizmo"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/Visible" to="." method="_togglevisibility"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Recenter" to="." method="_recenter"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Duplicate" to="." method="_duplicate"]
[connection signal="toggled" from="VBoxContainer/Booleans/HBoxContainer/PanelContainer/VBoxContainer/CheckBox" to="." method="_set_talks"]
[connection signal="toggled" from="VBoxContainer/Booleans/HBoxContainer/PanelContainer2/VBoxContainer/CheckBox" to="." method="_set_bounces"]
[connection signal="toggled" from="VBoxContainer/Booleans/HBoxContainer/PanelContainer3/VBoxContainer/CheckBox" to="." method="_set_blinks"]
[connection signal="toggled" from="VBoxContainer/Booleans/HBoxContainer/PanelContainer4/VBoxContainer/CheckBox" to="." method="_set_filter"]
